// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceList Initial render renders correctly when no resources passed in 1`] = `
<table
  id="resources"
>
  <thead>
    <tr>
      <th
        className="active"
      >
        <button
          onClick={[Function]}
        >
          Name 
          ↓
        </button>
      </th>
      <th
        className=""
      >
        <button
          onClick={[Function]}
        >
          Focus 
          
        </button>
      </th>
      <th
        className=""
      >
        <button
          onClick={[Function]}
        >
          Skill Level 
          
        </button>
      </th>
      <th
        className=""
      >
        <button
          onClick={[Function]}
        >
          Format 
          
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colspan="4"
      >
        Nothing found matching your search.
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ResourceList Initial render renders correctly when resources passed in 1`] = `
<table
  id="resources"
>
  <thead>
    <tr>
      <th
        className="active"
      >
        <button
          onClick={[Function]}
        >
          Name 
          ↓
        </button>
      </th>
      <th
        className=""
      >
        <button
          onClick={[Function]}
        >
          Focus 
          
        </button>
      </th>
      <th
        className=""
      >
        <button
          onClick={[Function]}
        >
          Skill Level 
          
        </button>
      </th>
      <th
        className=""
      >
        <button
          onClick={[Function]}
        >
          Format 
          
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <a
          href="/a-list-apart/"
        >
          A-Title
        </a>
      </td>
      <td>
        Front-end
      </td>
      <td>
        All
      </td>
      <td>
        Article
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="/scrimba/"
        >
          B-Title
        </a>
      </td>
      <td>
        Algorithms
      </td>
      <td>
        Moderate
      </td>
      <td>
        Interactive
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="/smashing-magazine/"
        >
          C-Title
        </a>
      </td>
      <td>
        Multiple
      </td>
      <td>
        Advanced
      </td>
      <td>
        Article
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="/the-odin-project/"
        >
          D-Title
        </a>
      </td>
      <td>
        Multiple
      </td>
      <td>
        Beginner, Moderate
      </td>
      <td>
        Tutorial
      </td>
    </tr>
    <tr>
      <td>
        <a
          href="/watch-and-code/"
        >
          E-Title
        </a>
      </td>
      <td>
        Front-end
      </td>
      <td>
        Beginner
      </td>
      <td>
        Video
      </td>
    </tr>
  </tbody>
</table>
`;
